<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgrnd"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="@dimen/main_logo_width"
        android:layout_height="@dimen/main_logo_height"
        android:src="@drawable/topimg"
        app:layout_constraintBottom_toTopOf="@+id/user_email_for_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_email_for_login"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/Whitebright"
        android:hint="@string/email_id_hint"
        android:inputType="textEmailAddress"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/user_pwd_for_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo" />

    <EditText
        android:id="@+id/user_pwd_for_login"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:background="@color/Whitebright"
        android:hint="@string/user_pwd_hint"
        android:inputType="numberPassword"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_for_login" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_button_font_size"
        android:background="@color/BG"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/new_user_signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_pwd_for_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_text_view_text"
        android:textColor="@color/Whitebright"
        app:layout_constraintBaseline_toBaselineOf="@+id/new_user_signup_button"
        app:layout_constraintEnd_toStartOf="@+id/new_user_signup_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_user_signup_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/Whitebright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />
</android.support.constraint.ConstraintLayout>