<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgrnd"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/main_logo_width"
        android:layout_height="@dimen/main_logo_height"
        app:layout_constraintBottom_toTopOf="@+id/user_email_for_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/topimg" />

    <EditText
        android:id="@+id/user_email_for_sign_up"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/user_credential_margin"
        android:background="@color/Whitebright"
        android:hint="@string/email_id_hint"
        android:inputType="textEmailAddress"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/user_pwd_for_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/user_pwd_for_sign_up"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/user_credential_margin"
        android:background="@color/Whitebright"
        android:hint="@string/user_pwd_hint"
        android:inputType="numberPassword"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_for_sign_up" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@color/BG"
        android:text="@string/sign_up_button_text"
        android:textColor="@android:color/white"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_pwd_for_sign_up" />
</android.support.constraint.ConstraintLayout>